# vulkan_engine

./: CMakeLists.txt  README.md  main.cpp  vengine.cpp  vengine.h  vengine_common.h  vmaterial.cpp  vmaterial.h  vmaterial_base.cpp  vmaterial_base.h  vmaterial_checker.cpp  vmaterial_checker.h  vmodel.cpp  vmodel.h  vobject.cpp  vobject.h  vscene.cpp  vscene.h  vshadow.cpp  vshadow.h  vtool.cpp  vtool.h
media/shaders/: a_shadow.bat  csm_depth.frag  csm_depth.frag.spv  csm_depth.vert  csm_depth.vert.spv  csm_shadow.frag  csm_shadow.frag.spv  csm_shadow.vert  csm_shadow.vert.spv  offscreen.frag.spv  offscreen.vert  shadow.frag  shadow.frag.spv  shadow.vert  shadow.vert.spv
media/shaders/_demo/: a.xml
media/shaders/_standard/: revite_map.txt  standard.frag  standard_map.txt
media/shaders/artificial_stone/: material_artificial_stone.bat  material_artificial_stone.frag  material_artificial_stone.frag.spv  material_artificial_stone01.xml  material_artificial_stone02.xml  material_artificial_stone03.xml
media/shaders/checker/: material_checker.bat  material_checker.frag  material_checker.spv  material_checker.xml
media/shaders/leather/: material_leather.bat  material_leather.frag  material_leather.frag.spv  material_leather01.xml  material_leather02.xml  material_leather03.xml
media/shaders/material_default_frag/: material_default.bat  material_default.frag  material_default.frag.spv  material_default.xml
media/shaders/material_default_vert/: material_default.bat  material_default.vert  material_default.vert.spv
media/shaders/mirror/: material_mirror.bat  (+4 more)
(+165 files in other folders)
